Stop bottom of pie charts being cut off

--- a/www-src/app/styles/layout.less
+++ b/www-src/app/styles/layout.less
@@ -10,6 +10,10 @@ body > .container {
 	padding-top: 60px;
 }
 
+svg {
+	height: initial; /* Over-riding nv.d3.css */
+}
+
 .nav, .pagination, .carousel, .panel-title a { cursor: pointer; }
 
 .footer {
